<resources>
    <string name="app_name">Home24</string>
    <string name="title_activity_selection">SelectionActivity</string>
    <string name="title_activity_reviews">ReviewsActivity</string>

    <string name="msg_retry">Retry</string>
    <string name="msg_loading">Loading...</string>
    <string name="msg_err_unknown">Ooops, Something went wrong!</string>
    <string name="msg_err_internet">Please check your internet connection.</string>
    <string name="txt_start">START</string>

    <string name="example_reviews_like_counter">3/10</string>
    <string name="msg_no_more_reviews_left">No More Reviews Left!</string>
    <string name="review">Review</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>

</resources>
